--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "1.0.0",
     "description": "Api client for medium and dev.to to fetch most recent articles",
     "main": "index.js",
+    "typings": "./index.d.ts",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
