--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "article-js",
     "version": "1.0.0",
-    "description": "Api client for medium and dev.to to fetch most recent articles",
+    "description": "Api client for dev.to and medium to fetch most recent articles",
     "main": "index.js",
     "typings": "./index.d.ts",
     "scripts": {
@@ -11,10 +11,13 @@
     "keywords": [
         "medium",
         "dev.to",
+        "devto",
         "medium api",
         "dev.to api",
         "medium article",
         "dev.to article",
+        "medium-article",
+        "dev.to-article",
         "blog article",
         "blog post",
         "blog api",
