--- a/package.json
+++ b/package.json
@@ -2,8 +2,31 @@
   "name": "@arifszn/blog-js",
   "version": "2.0.0",
   "description": "Api client to get recent blog posts from popular blogging platforms",
-  "main": "./src/index.js",
+  "main": "./dist/index.cjs.js",
+  "module": "./dist/index.esm.js",
   "typings": "./types/index.d.ts",
+  "scripts": {
+    "build": "rollup -c"
+  },
+  "license": "MIT",
+  "author": "arifszn",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/arifszn/blog-js.git"
+  },
+  "bugs": {
+    "url": "https://github.com/arifszn/blog-js/issues"
+  },
+  "devDependencies": {
+    "@rollup/plugin-commonjs": "^21.0.3",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^13.1.3",
+    "axios": "^0.21.1",
+    "rollup": "^2.70.1",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-terser": "^7.0.2",
+    "string-strip-html": "^8.3.0"
+  },
   "keywords": [
     "medium",
     "dev.to",
@@ -24,18 +47,5 @@
     "blog post api",
     "recent articles",
     "article api"
-  ],
-  "license": "MIT",
-  "author": "arifszn",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/arifszn/blog-js.git"
-  },
-  "bugs": {
-    "url": "https://github.com/arifszn/blog-js/issues"
-  },
-  "devDependencies": {
-    "axios": "^0.21.1",
-    "string-strip-html": "^8.3.0"
-  }
+  ]
 }
