--- a/package.json
+++ b/package.json
@@ -2,11 +2,9 @@
   "name": "@arifszn/blog-js",
   "version": "2.0.0",
   "description": "Api client to get recent blog posts from popular blogging platforms",
-  "main": "./dist/index.cjs.js",
-  "module": "./dist/index.esm.js",
+  "main": "./src/index.js",
   "typings": "./types/index.d.ts",
   "scripts": {
-    "build": "rollup -c",
     "lint": "eslint --ext .js,.jsx .",
     "lint:fix": "eslint --ext .js,.jsx --fix .",
     "prettier": "prettier --check './**/*.{js,jsx,ts,tsx,css,md,json}'",
@@ -21,19 +19,15 @@
   "bugs": {
     "url": "https://github.com/arifszn/blog-js/issues"
   },
-  "devDependencies": {
-    "@rollup/plugin-commonjs": "^21.0.3",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^13.1.3",
+  "dependencies": {
     "axios": "^0.21.1",
+    "string-strip-html": "^8.3.0"
+  },
+  "devDependencies": {
     "eslint": "^8.12.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "prettier": "^2.6.1",
-    "rollup": "^2.70.1",
-    "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-terser": "^7.0.2",
-    "string-strip-html": "^8.3.0"
+    "prettier": "^2.6.1"
   },
   "keywords": [
     "medium",
