--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint": "^8.12.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^28.1.1",
     "prettier": "^2.6.1"
   },
   "keywords": [
