Set codeclimate-action `debug` to false

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -52,4 +52,4 @@ jobs:
           CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
         with:
           coverageCommand: npm run test:coverage
-          debug: true
+          debug: false
