--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@arifszn/blog-js",
-  "version": "2.0.1",
-  "description": "Api client to get recent blog posts from popular blogging platforms",
+  "version": "2.0.2",
+  "description": "Api client to get recent blog posts from popular blogging platforms,",
   "main": "./src/index.js",
   "typings": "./types/index.d.ts",
   "scripts": {
